# idle-render

./: AGENT.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  HARDENING.md  PIPELINE.md  TEST_MATRIX.md
src/: audio.rs  cli.rs  duration.rs  encode.rs  error.rs  lib.rs  main.rs  models.rs  paths.rs  pipeline.rs  proptests.rs  segment.rs
unraid/: idle-render.xml  render.xml
